--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -4,9 +4,24 @@
 .fa {
    font-family: "FontAwesome";
 }
+.far {
+    font-family: Font Awesome 5 Free, fa-regular-400;
+    font-weight: 400; 
+}
+
+.fas {
+    font-family: Font Awesome 5 Free, fa-solid-900;
+    font-weight: 900; 
+}
 
 .t-36 {
    font-size: 36;
+}
+.t-12 {
+    font-size: 12;
+}
+.primary{
+    color: $blue-dark;
 }
 
 // Common page class
