--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -17,11 +17,18 @@
 .t-36 {
    font-size: 36;
 }
+.t-24 {
+    font-size: 24;
+}
 .t-12 {
     font-size: 12;
 }
 .primary{
     color: $blue-dark;
+}
+.btn-error{
+    background-color: $error-light;
+    color: white;
 }
 
 // Common page class
